src/test/deca/context/valid/avecObjet/selection_on_var_object.deca
// Description :
//    Sélection de champ sur une variable objet.
//
// Resultats :
//    OK

class A {
    int x;
}

{
    A a = new A();
    a.x = 8;
    println(a.x);
}

