src/test/deca/context/invalid/fields/write_to_unknown_field.deca
// Description :
//    Affectation vers un champ inexistant.
//
// Resultats :
//    Erreur contextuelle
//    Ligne <No_de_ligne> : <message d'erreur de votre compilateur>

class A {
    int x;
}

{
    A a = new A();
    a.z = 3;
}

